engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc
@@ -1302,12 +1302,6 @@ std::unique_ptr<Item> MagmaKVStore::makeItem(Vbid vb,
         item->setDeleted(static_cast<DeleteSource>(meta.getDeleteSource()));
     }
 
-    if (body) {
-        // function shared with KEY_ONLY creation paths, so only sanitize when
-        // a body was created
-        checkAndFixKVStoreCreatedItem(*item);
-    }
-
     if (magmakv::isPrepared(keySlice, metaSlice)) {
         auto level =
                 static_cast<cb::durability::Level>(meta.getDurabilityLevel());
@@ -1315,11 +1309,15 @@ std::unique_ptr<Item> MagmaKVStore::makeItem(Vbid vb,
         if (meta.isSyncDelete()) {
             item->setDeleted(DeleteSource::Explicit);
         }
-        return item;
     } else if (magmakv::isAbort(keySlice, metaSlice)) {
         item->setAbortSyncWrite();
         item->setPrepareSeqno(meta.getPrepareSeqno());
-        return item;
+    }
+
+    if (body) {
+        // function shared with KEY_ONLY creation paths, so only sanitize when
+        // a body was created
+        checkAndFixKVStoreCreatedItem(*item);
     }
 
     return item;
